--- a/.drone.yml
+++ b/.drone.yml
@@ -1,9 +1,13 @@
 pipeline:
   build:
-    image: 127.0.0.1:5001/builder-android
+    image: productionwentdown/android-builder
+    pull: true
+    secrets: [ store_file, store_password, key_alias ]
+    commands:
+    - release
   release:
     image: plugins/github-release
     secrets: [ github_token ]
-    files: app/build/outputs/apk/app-debug.apk
+    files: app/build/outputs/apk/release/app-release.apk
     when:
       event: tag
